# agent-invest

./: .dockerignore  .gitignore  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agent/: package.json  tsconfig.json  tsup.config.ts
agent/docker/: Dockerfile  entrypoint.sh
agent/scripts/: .gitignore  pyproject.toml  run_agent_script.sh
agent/scripts/agent_invest_scripts/: __init__.py  list_runs.py  list_universe.py  read_memory.py  run_backtest.py  write_memory.py
agent/scripts/agent_invest_scripts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent/scripts/agent_invest_scripts/_lib/: __init__.py  cli.py  data.py  report.py  storage.py
agent/scripts/agent_invest_scripts/_lib/backtest/: __init__.py  costs.py  engine.py  metrics.py  portfolio.py
agent/scripts/agent_invest_scripts/_lib/signals/: __init__.py  cross_sectional_momentum.py  filters.py  regimes.py  time_series_momentum.py
agent/scripts/agent_invest_scripts/_lib/strategies/: __init__.py  cross_sectional_momentum.py
agent/scripts/agent_invest_scripts/test_fixtures/: __init__.py  sleep.py
agent/scripts/scripts/: __init__.py
agent/scripts/scripts/ingestion/: __init__.py  _storage.py  coingecko.py  refresh_history.py  refresh_universe.py
agent/scripts/tests/: test_backtest_engine.py  test_cli_timeout.py  test_data.py  test_list_runs.py  test_list_universe.py  test_metrics.py  test_read_memory.py  test_refresh_history.py  test_refresh_universe.py  test_report.py  test_run_backtest.py  test_signals.py  test_write_memory.py
agent/src/: env.ts  index.ts
agent/src/agent/: prompt.ts  script_runner.test.ts  session.test.ts  session.ts
agent/src/api/: server.test.ts  server.ts
agent/src/db/: client.ts  migrate.ts
agent/src/storage/: local.test.ts  local.ts  s3.ts  smoke.ts
agent/test/: local.test.ts  prompt.test.ts  server.test.ts  session.test.ts
frontend/: .env.local.example  package.json
frontend/app/: page.tsx
frontend/components/: ChatView.tsx  Composer.tsx  IdentityBar.tsx  MessageList.tsx  RunInspector.tsx  StrategySidebar.tsx
frontend/lib/: agent-client.ts  constants.ts  local-store.ts  types.ts
(+12 files in other folders)
