[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "agent-invest-scripts"
version = "0.1.0"
description = "Agent-facing Python scripts for agent-invest."
requires-python = ">=3.12,<3.13"
dependencies = [
  "polars>=1.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.11.13,<0.12.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
