[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "agent-invest-scripts"
version = "0.1.0"
description = "Agent-facing Python scripts for agent-invest."
requires-python = ">=3.12,<3.13"
dependencies = [
  "boto3>=1.39.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pandas>=2.2.0,<3.0.0",
  "polars>=1.8.0",
  "pyarrow>=18.0.0,<19.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.11.13,<0.12.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agent_invest_scripts", "scripts"]

[tool.hatch.build.targets.sdist]
include = [
  "agent_invest_scripts",
  "scripts",
  "pyproject.toml",
  "uv.lock",
]
